# SDL_gpu_SW_examples

./: .gitignore  CMakeLists.txt  README.md
Content/Shaders/: compile_shaders_linux.sh  install_shadercross.py
Content/Shaders/Compiled/DXIL/: 001_triangle.frag.dxil  001_triangle.vert.dxil  003_phong.frag.dxil  003_phong.vert.dxil  003_toon.frag.dxil  003_wireframe.frag.dxil  003_wireframe.vert.dxil
Content/Shaders/Compiled/HLSL/: 001_triangle.frag.hlsl  001_triangle.vert.hlsl  003_phong.frag.hlsl  003_phong.vert.hlsl  003_toon.frag.hlsl  003_wireframe.frag.hlsl  003_wireframe.vert.hlsl
Content/Shaders/Compiled/MSL/: 001_triangle.frag.msl  001_triangle.vert.msl  003_phong.frag.msl  003_toon.frag.msl  003_toon.vert.msl  003_wireframe.frag.msl  003_wireframe.vert.msl
Content/Shaders/Compiled/SPIRV/: 001_triangle.vert.spv  003_phong.frag.spv  003_toon.frag.spv  003_toon.vert.spv  003_wireframe.vert.spv
Content/Shaders/Source/: 001_triangle.vert  003_phong.frag  003_phong.vert  003_toon.frag  003_wireframe.vert
Examples/: Buffer.cpp  Buffer.hpp  Common.cpp  Common.hpp  Data.hpp  Defines.hpp  Demo001_Basics_BasicTriangle.cpp  Demo001_Basics_BasicTriangle.hpp  Demo003_Basics_Pipelines.cpp  Demo003_Basics_Pipelines.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Main.cpp  RenderPass.cpp  RenderPass.hpp  Scene.hpp  Shader.cpp  Shader.hpp  TransferBuffer.cpp  TransferBuffer.hpp
